--- a/proj3-1/index.html
+++ b/proj3-1/index.html
@@ -49,7 +49,7 @@
   <h2 align="middle">Connor Dang</h2>
 
   <!-- Add Website URL -->
-  <h2 align="middle">Website URL: <a href="TODO">TODO</a></h2>
+  <h2 align="middle">Website URL: <a href="https://cal-cs184-student.github.io/project-webpages-sp23-ConnorDang/proj3-1/index.html">GitHub Pages</a></h2>
 
   <br><br>
       <h2 align="middle">Part 1: Ray Generation and Scene intersection</h2>
