Add proj 3.2 site

--- a/proj3-1/index.html
+++ b/proj3-1/index.html
@@ -52,6 +52,11 @@
   <h2 align="middle">Website URL: <a href="https://cal-cs184-student.github.io/project-webpages-sp23-ConnorDang/proj3-1/index.html">GitHub Pages</a></h2>
 
   <br><br>
+  <h2 align="middle">Overview:</h2>
+  <p>In this project, I was tasked to implement the core routines of a physically-based ray tracing renderer. In the first part of the project, I explored ray generation and ray-scene intersections which required me to work in various related coordinate spaces. In the second part, I implemented a bounding volume hierarchy structure to efficiently reduce the number of ray intersection tests needed to be performed. In Part 3 and Part 4 of the project, I worked on illuminating the rendered scene via inverse ray tracing, photometry concepts, and Monte Carlo estimators. This allowed me to first implement direct illumination and then global illumination. In the final part, I implemented adaptive sampling to reduce noise in rendered images by increasing sample rate for slower converging pixels.</p>
+
+
+  <br><br>
       <h2 align="middle">Part 1: Ray Generation and Scene intersection</h2>
       <!-- Walk through the ray generation and primitive intersection parts of the rendering pipeline.
 Explain the triangle intersection algorithm you implemented in your own words.
