added site url for 3.2

--- a/proj3-2/index.html
+++ b/proj3-2/index.html
@@ -49,7 +49,7 @@
   <h2 align="middle">Connor Dang</h2>
 
   <!-- Add Website URL -->
-  <h2 align="middle">TODO: <a href="https://cal-cs184-student.github.io/project-webpages-sp23-ConnorDang/proj3-1/index.html">GitHub Pages</a></h2>
+  <h2 align="middle">Website URL: <a href="https://cal-cs184-student.github.io/project-webpages-sp23-ConnorDang/proj3-2/index.html">GitHub Pages</a></h2>
 
 
   <br><br>
